Additional comments on HTML

--- a/index.html
+++ b/index.html
@@ -103,3 +103,14 @@
 
 </body>
 </html>
+
+<!-- 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
+pwd
+git init
+git add .
+git config --global user.name "ooakosikenneth"
+git config --global user.email "thennek.oapat@gmail.com"
+git commit -m "added: fcb-portfolio"
+git remote add github https://github.com/ooakosikenneth/tapao-fcb-portfolio.git
+git push github master then close pop-ups
+enter username and password/token on terminal -  -->
